--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "cognitvecanvas",
+  "name": "cognitivecanvas",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "test": "npm install express --save"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/madebyafox/CognitiveCanvas/issues"
   },
-  "homepage": "https://github.com/madebyafox/CognitiveCanvas#readme"
+  "homepage": "https://github.com/madebyafox/CognitiveCanvas#readme",
+  "dependencies": {
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "^2.5.7",
+    "express": "~4.15.5",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5"
+  }
 }
