--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/madebyafox/CognitiveCanvas#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -27,6 +28,7 @@
     "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
     "pg": "6.x",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "vue": "^2.5.13"
   }
 }
