--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "_moduleAliases": {
     "@root": ".",
-    "@Container": "./services/ContainerAPI",
+    "@ContainerManager": "./services/ContainerAPI",
     "@ContainerModels": "./services/ContainerAPI/app/models",
     "@ContainerAPI": "./services/ContainerAPI/config/app.js",
     "@config": "./services/ContainerAPI/config/index.js"
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "consign": "^0.1.6",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
