--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.4"
+    "vuetify": "^1.0.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
