--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "bugsnag-js": "^4.3.1",
+    "bugsnag-vue": "^1.0.1",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
