--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
     "vue-google-signin-button": "^1.0.2",
+    "vue-nav-tabs": "^0.5.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.4",
     "vuex": "^3.0.1"
