--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "vue-nav-tabs": "^0.5.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
