--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "bugsnag-js": "^4.3.1",
     "bugsnag-vue": "^1.0.1",
     "gsap": "^1.20.4",
