--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "btoa-lite": "^1.0.0",
     "bugsnag-js": "^4.3.1",
     "bugsnag-vue": "^1.0.1",
+    "fetch": "^1.1.0",
     "googleapis": "^28.1.0",
     "gsap": "^1.20.4",
     "module": "^1.2.5",
     "module-alias": "^2.0.6",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
