--- a/client/package.json
+++ b/client/package.json
@@ -43,12 +43,11 @@
     "vuetify": "^1.0.4",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.2",
-    "nvd3": "^1.8.6",
-    "d3": "^3.5.17",
     "json2csv": "^4.1.2",
-    "vue-nvd3": "^1.0.0",
     "vue-konva": "^1.0.6",
-    "konva": "^2.1.3"
+    "konva": "^2.1.3",
+    "chart.js": "^2.7.2",
+    "vue-chartjs": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
