Management Top bar done, working on management

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
     "@router": "./src/router"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "btoa-lite": "^1.0.0",
@@ -29,17 +32,20 @@
     "fetch": "^1.1.0",
     "googleapis": "^28.1.0",
     "gsap": "^1.20.4",
+    "i": "^0.3.6",
     "module": "^1.2.5",
     "module-alias": "^2.0.6",
+    "npm": "^6.4.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
+    "sudo": "^1.0.3",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.4",
     "vue-cookie": "^1.1.4",
     "vue-google-signin-button": "^1.0.2",
     "vue-nav-tabs": "^0.5.6",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.4",
+    "vuetify": "^1.2.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.2"
   },
